deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: peanuts-app
  labels:
    app: peanuts-app
    app.kubernetes.io/name: peanuts-app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: peanuts-app
